# EvlyMC

./: CMakeLists.txt
data/lang/: en_US.lang
src/client/gui/screens/crafting/: PaneCraftingScreen.cpp  PaneCraftingScreen.h  StonecutterScreen.cpp
src/world/entity/player/: Inventory.cpp  Inventory.h
src/world/inventory/: BaseContainerMenu.cpp  BaseContainerMenu.h
src/world/item/crafting/: Recipe.cpp  Recipe.h  Recipes.cpp  StonecutterRecipe.cpp  StonecutterRecipe.h
src/world/level/tile/: DeepslateTile.h  StonecutterTile.h  Tile.cpp
